--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -10,7 +10,7 @@ $font-serif: "ff-tisa-web-pro", serif
 $font-sans: "FontSiteSans", sans-serif
 
 @include font-face(icons, '../fonts/icons', normal, normal)
-@include font-face(icons, '../fonts/FontSiteSans', normal, normal)
+// @include font-face(icons, '../fonts/FontSiteSansRoman', normal, normal)
 
 @mixin respond-to($breakpoint)
 	@media only screen and (max-width: $breakpoint + px)
