Altering the tile area to be html and not image
still working to get the parallax the way i want it

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -69,6 +69,18 @@ body
 	width: $rs*6
 	height: $rs*6
 	@include respond-to(800)
+		top: -$rs*5
+		width: $rs*5
+		height: $rs*5
+	@include respond-to(700)
+		top: -$rs*4
+		width: $rs*4
+		height: $rs*4
+	@include respond-to(568)
+		top: -$rs*3
+		width: $rs*3
+		height: $rs*3
+	@include respond-to(480)
 		top: -$rs*3
 		width: $rs*3
 		height: $rs*3
@@ -88,8 +100,17 @@ body
 		width: $rs*6
 		height: $rs*6
 		@include respond-to(800)
-			width: $rs*2
-			height: $rs*2
+			width: $rs*5
+			height: $rs*5
+		@include respond-to(700)
+			width: $rs*4
+			height: $rs*4
+		@include respond-to(568)
+			width: $rs*3
+			height: $rs*3
+		@include respond-to(480)
+			width: $rs*3
+			height: $rs*3
 		background-image: url('/assets/img/readium-logo.png')
 		background-size: cover
 		background-repeat: no-repeat
@@ -104,9 +125,9 @@ body
 	overflow: hidden
 	background-color: #000
 	.teaserimage-image
-		background-image: url('/assets/img/crushed/header_sm.png')
+		background-image: url('/assets/img/crushed/header_sm_blank.png')
 		@include respond-to(800)
-			background-image: url('/assets/img/crushed/header_mobile.png')
+			background-image: url('/assets/img/crushed/header_blank.png')
 		background-size: cover
 		background-position: center
 		position: absolute
@@ -116,6 +137,54 @@ body
 		bottom: 0
 		z-index: 1
 		text-indent: -9999px
+	.blog-logo
+		width: $rs*9
+		height: $rs*9
+		display: block
+		position: relative
+		// top: calc(50% - #{$rs})
+		margin: $rs*4.5 auto 0 auto
+		// right: 50%
+		// margin-right: -$rs*3.75
+		background-size: cover
+		border-radius: 50%
+		z-index: 99
+		text-indent: -9999px
+		border: 1px solid #fff
+		// background-color: #fff
+		-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.3)
+		-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.3)
+		box-shadow: 0 1px 1px rgba(0,0,0,0.3)
+		background-image: url('/assets/img/crushed/initials_cutout_vintage.png')
+		@include respond-to(800)
+			background-image: url('/assets/img/crushed/initials_cutout_vintage.png')
+	.blog-title
+		position: relative
+		z-index: 99
+		font-family: $font-serif
+		margin: 0
+		padding: $rs*4 $rs $rs/2
+		font-size: $ff*3
+		text-align: center
+		font-weight: 900
+		letter-spacing: -2px
+		outline: 0
+		line-height: 1.61
+		word-break: break-word
+		color: #fff
+		text-shadow: 1px 2px 2px black
+	.blog-description
+		position: relative
+		z-index: 99
+		font-family: $font-sans
+		margin: 0 0 20px
+		padding: 0 $rs*2
+		font-size: $ff/8*9
+		line-height: 1.61
+		color: #efefef
+		text-align: center
+		font-weight: 100
+		text-shadow: 1px 1px 1px black
 
 .blog-header
 	width: 100%
@@ -142,25 +211,32 @@ body
 		-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.3)
 		-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.3)
 		box-shadow: 0 1px 1px rgba(0,0,0,0.3)
+		background-image: url('/assets/img/crushed/initials_cutout_vintage.png')
+		@include respond-to(800)
+			background-image: url('/assets/img/crushed/initials_cutout_vintage.png')
 	.blog-title
+		font-family: $font-serif
 		margin: 0
 		padding: $rs*5.25 $rs $rs/2
 		font-size: $ff*3
 		text-align: center
-		font-weight: 700
+		font-weight: 900
 		letter-spacing: -2px
 		outline: 0
 		line-height: 50px
 		word-break: break-word
 		color: #333
+		text-shadow: 1px 2px 2px black
 	.blog-description
+		font-family: $font-sans
 		margin: 0 0 20px
 		padding: 0 $rs*2
 		font-size: $ff/8*9
 		line-height: 1.5
 		color: #666
 		text-align: center
-		font-weight: 400
+		font-weight: 100
+		text-shadow: 1px 1px 1px black
 	.custom-links
 		margin: 0 0 50px
 		margin-top: 1em
@@ -219,7 +295,15 @@ body
 
 .post-template .content
 	max-width: 700px
-
+	@include respond-to(915)
+		max-width: 640px
+	@include respond-to(850)
+		max-width: 540px
+	@include respond-to(568)
+		max-width: 480px
+	@include respond-to(480)
+		max-width: 400px
+		
 .index-headline
 	border-top: 1px solid #dededc
 	margin: 0
@@ -248,7 +332,7 @@ body
 	position: absolute
 	top: 10px
 	right: 30px
-	line-height: 44px
+	line-height: 1.61803399
 	display: inline-block
 	white-space: nowrap
 	color: rgba(0,0,0,0.25)
@@ -267,7 +351,7 @@ body
 	padding: $rs*3 0
 	width: 100%
 	max-width: 640px
-	font-size: $ff/4*3
+	font-size: $ff*0.7
 	text-align: center
 	color: #999
 	line-height: $rs*1.1
@@ -311,7 +395,7 @@ body
 			font-style: normal
 			letter-spacing: -0.04em
 			font-size: $ff*3
-			line-height: 1.1
+			line-height: 1.61803399
 			color: #fff
 			margin-bottom: 16px
 			text-shadow: 0px 1px 16px rgba(0,0,0,0.5), 0px 0px 1px rgba(0,0,0,0.5)
@@ -360,7 +444,7 @@ body
 			font-style: normal
 			letter-spacing: -0.04em
 			font-size: $ff*3
-			line-height: 1.1
+			line-height: 1.61803399
 			color: #333332
 			margin-bottom: 16px
 		.author-image
@@ -397,7 +481,7 @@ body
 			font-weight: 700
 			font-style: normal
 			font-size: $ff
-			line-height: 1.3
+			line-height: 1.61803399
 			margin: 0
 			font-family: $font-sans
 			margin-bottom: 4px
@@ -406,14 +490,14 @@ body
 			font-weight: 700
 			font-style: normal
 			font-size: $ff*2
-			line-height: 1.2
+			line-height: 1.61803399
 			padding-top: 31px
 			margin-bottom: 4px
 		p
 			font-weight: 400
 			font-style: normal
 			font-size: $ff
-			line-height: 1.8
+			line-height: 1.61803399
 			margin: 0
 			padding-bottom: 30px
 			color: #333
@@ -498,7 +582,7 @@ body
 				font-weight: 400
 				font-style: normal
 				font-size: $rs*1.1
-				line-height: 1.8
+				line-height: 1.61803399
 				margin-left: 30px
 				margin-bottom: 12px
 				padding-top: 2px
@@ -526,6 +610,8 @@ body
 				padding-bottom: $rs*2
 			.index-headline
 				padding-bottom: 32px
+				font-size: $ff*0.8
+				line-height: 1.1
 			.author-image
 				display: block
 				width: 80px
@@ -535,14 +621,14 @@ body
 				border-radius: 100%
 				text-indent: -9999px
 			h4
-				font-size: $ff*1.2
+				font-size: $ff*0.8
 				line-height: 1.1
 				font-weight: 700
 				padding: 0
 				margin: 0
 				padding-left: 100px
 			p
-				font-size: $ff*0.9
+				font-size: $ff*0.7
 				line-height: 1.3
 				font-weight: 400
 				padding: 0
@@ -563,8 +649,8 @@ body
 				padding: 0
 				color: #333
 				text-align: left
-				font-size: $ff*0.9
-				line-height: 1.3
+				font-size: $ff*0.7
+				line-height: 1.1
 				color: #999
 				a
 					color: #333
@@ -610,7 +696,7 @@ body
 		position: relative
 		z-index: 99
 		max-width: 640px
-		padding: 120px 0 90px
+		padding: 170px 0 40px
 		text-align: center
 		margin: 0 auto
 		.blog-title
@@ -653,7 +739,6 @@ body
 			border-radius: 999em
 			line-height: 44px
 			padding: 0 18px
-			bottom: 22px
 
 
 
