--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -69,6 +69,21 @@ body {
   transition: all 0.5s ease-out; }
   @media only screen and (max-width: 800px) {
     .logo-readium {
+      top: -80px;
+      width: 80px;
+      height: 80px; } }
+  @media only screen and (max-width: 700px) {
+    .logo-readium {
+      top: -64px;
+      width: 64px;
+      height: 64px; } }
+  @media only screen and (max-width: 568px) {
+    .logo-readium {
+      top: -48px;
+      width: 48px;
+      height: 48px; } }
+  @media only screen and (max-width: 480px) {
+    .logo-readium {
       top: -48px;
       width: 48px;
       height: 48px; } }
@@ -84,8 +99,20 @@ body {
     background-repeat: no-repeat; }
     @media only screen and (max-width: 800px) {
       .logo-readium .logo {
-        width: 32px;
-        height: 32px; } }
+        width: 80px;
+        height: 80px; } }
+    @media only screen and (max-width: 700px) {
+      .logo-readium .logo {
+        width: 64px;
+        height: 64px; } }
+    @media only screen and (max-width: 568px) {
+      .logo-readium .logo {
+        width: 48px;
+        height: 48px; } }
+    @media only screen and (max-width: 480px) {
+      .logo-readium .logo {
+        width: 48px;
+        height: 48px; } }
 
 .logo-readium.showing {
   left: 10px;
@@ -98,7 +125,7 @@ body {
   overflow: hidden;
   background-color: black; }
   .teaserimage .teaserimage-image {
-    background-image: url("/assets/img/crushed/header_sm.png");
+    background-image: url("/assets/img/crushed/header_sm_blank.png");
     background-size: cover;
     background-position: center;
     position: absolute;
@@ -110,7 +137,52 @@ body {
     text-indent: -9999px; }
     @media only screen and (max-width: 800px) {
       .teaserimage .teaserimage-image {
-        background-image: url("/assets/img/crushed/header_mobile.png"); } }
+        background-image: url("/assets/img/crushed/header_blank.png"); } }
+  .teaserimage .blog-logo {
+    width: 144px;
+    height: 144px;
+    display: block;
+    position: relative;
+    margin: 72px auto 0 auto;
+    background-size: cover;
+    border-radius: 50%;
+    z-index: 99;
+    text-indent: -9999px;
+    border: 1px solid white;
+    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
+    background-image: url("/assets/img/crushed/initials_cutout_vintage.png"); }
+    @media only screen and (max-width: 800px) {
+      .teaserimage .blog-logo {
+        background-image: url("/assets/img/crushed/initials_cutout_vintage.png"); } }
+  .teaserimage .blog-title {
+    position: relative;
+    z-index: 99;
+    font-family: "ff-tisa-web-pro", serif;
+    margin: 0;
+    padding: 64px 16px 8px;
+    font-size: 54px;
+    text-align: center;
+    font-weight: 900;
+    letter-spacing: -2px;
+    outline: 0;
+    line-height: 1.61;
+    word-break: break-word;
+    color: white;
+    text-shadow: 1px 2px 2px black; }
+  .teaserimage .blog-description {
+    position: relative;
+    z-index: 99;
+    font-family: "FontSiteSans", sans-serif;
+    margin: 0 0 20px;
+    padding: 0 32px;
+    font-size: 20.25px;
+    line-height: 1.61;
+    color: #efefef;
+    text-align: center;
+    font-weight: 100;
+    text-shadow: 1px 1px 1px black; }
 
 .blog-header {
   width: 100%;
@@ -139,26 +211,34 @@ body {
     background-color: white;
     -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
     -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3); }
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
+    background-image: url("/assets/img/crushed/initials_cutout_vintage.png"); }
+    @media only screen and (max-width: 800px) {
+      .blog-header .blog-logo {
+        background-image: url("/assets/img/crushed/initials_cutout_vintage.png"); } }
   .blog-header .blog-title {
+    font-family: "ff-tisa-web-pro", serif;
     margin: 0;
     padding: 84px 16px 8px;
     font-size: 54px;
     text-align: center;
-    font-weight: 700;
+    font-weight: 900;
     letter-spacing: -2px;
     outline: 0;
     line-height: 50px;
     word-break: break-word;
-    color: #333333; }
+    color: #333333;
+    text-shadow: 1px 2px 2px black; }
   .blog-header .blog-description {
+    font-family: "FontSiteSans", sans-serif;
     margin: 0 0 20px;
     padding: 0 32px;
     font-size: 20.25px;
     line-height: 1.5;
     color: #666666;
     text-align: center;
-    font-weight: 400; }
+    font-weight: 100;
+    text-shadow: 1px 1px 1px black; }
   .blog-header .custom-links {
     margin: 0 0 50px;
     margin-top: 1em;
@@ -221,6 +301,18 @@ body {
 
 .post-template .content {
   max-width: 700px; }
+  @media only screen and (max-width: 915px) {
+    .post-template .content {
+      max-width: 640px; } }
+  @media only screen and (max-width: 850px) {
+    .post-template .content {
+      max-width: 540px; } }
+  @media only screen and (max-width: 568px) {
+    .post-template .content {
+      max-width: 480px; } }
+  @media only screen and (max-width: 480px) {
+    .post-template .content {
+      max-width: 400px; } }
 
 .index-headline {
   border-top: 1px solid #dededc;
@@ -249,7 +341,7 @@ body {
   position: absolute;
   top: 10px;
   right: 30px;
-  line-height: 44px;
+  line-height: 1.61803;
   display: inline-block;
   white-space: nowrap;
   color: rgba(0, 0, 0, 0.25);
@@ -269,7 +361,7 @@ body {
   padding: 48px 0;
   width: 100%;
   max-width: 640px;
-  font-size: 13.5px;
+  font-size: 12.6px;
   text-align: center;
   color: #999999;
   line-height: 17.6px; }
@@ -316,7 +408,7 @@ body {
     font-style: normal;
     letter-spacing: -0.04em;
     font-size: 54px;
-    line-height: 1.1;
+    line-height: 1.61803;
     color: white;
     margin-bottom: 16px;
     text-shadow: 0px 1px 16px rgba(0, 0, 0, 0.5), 0px 0px 1px rgba(0, 0, 0, 0.5); }
@@ -364,7 +456,7 @@ body {
   font-style: normal;
   letter-spacing: -0.04em;
   font-size: 54px;
-  line-height: 1.1;
+  line-height: 1.61803;
   color: #333332;
   margin-bottom: 16px; }
 .post .noarticleimage .author-image {
@@ -401,7 +493,7 @@ body {
     font-weight: 700;
     font-style: normal;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.61803;
     margin: 0;
     font-family: "FontSiteSans", sans-serif;
     margin-bottom: 4px; }
@@ -410,14 +502,14 @@ body {
     font-weight: 700;
     font-style: normal;
     font-size: 36px;
-    line-height: 1.2;
+    line-height: 1.61803;
     padding-top: 31px;
     margin-bottom: 4px; }
   .post .post-content p {
     font-weight: 400;
     font-style: normal;
     font-size: 18px;
-    line-height: 1.8;
+    line-height: 1.61803;
     margin: 0;
     padding-bottom: 30px;
     color: #333333;
@@ -506,7 +598,7 @@ body {
       font-weight: 400;
       font-style: normal;
       font-size: 17.6px;
-      line-height: 1.8;
+      line-height: 1.61803;
       margin-left: 30px;
       margin-bottom: 12px;
       padding-top: 2px; }
@@ -536,7 +628,9 @@ body {
         width: 100%;
         padding-bottom: 32px; } }
     .post .bottom-teaser .isLeft .index-headline {
-      padding-bottom: 32px; }
+      padding-bottom: 32px;
+      font-size: 14.4px;
+      line-height: 1.1; }
     .post .bottom-teaser .isLeft .author-image {
       display: block;
       width: 80px;
@@ -546,14 +640,14 @@ body {
       border-radius: 100%;
       text-indent: -9999px; }
     .post .bottom-teaser .isLeft h4 {
-      font-size: 21.6px;
+      font-size: 14.4px;
       line-height: 1.1;
       font-weight: 700;
       padding: 0;
       margin: 0;
       padding-left: 100px; }
     .post .bottom-teaser .isLeft p {
-      font-size: 16.2px;
+      font-size: 12.6px;
       line-height: 1.3;
       font-weight: 400;
       padding: 0;
@@ -577,8 +671,8 @@ body {
       padding: 0;
       color: #333333;
       text-align: left;
-      font-size: 16.2px;
-      line-height: 1.3;
+      font-size: 12.6px;
+      line-height: 1.1;
       color: #999999; }
       .post .bottom-teaser .isRight .site-footer a {
         color: #333333;
@@ -626,7 +720,7 @@ body {
     position: relative;
     z-index: 99;
     max-width: 640px;
-    padding: 120px 0 90px;
+    padding: 170px 0 40px;
     text-align: center;
     margin: 0 auto; }
     .bottom-closer .inner .blog-title {
@@ -668,5 +762,4 @@ body {
       box-sizing: border-box;
       border-radius: 999em;
       line-height: 44px;
-      padding: 0 18px;
-      bottom: 22px; }
+      padding: 0 18px; }
