--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -842,7 +842,7 @@ margin on the iframe, cause it breaks stuff. */
         font-size: 2.8rem;
     }
     
-    .logo-readium {
+/*     .logo-readium {
         top: -50px;
         width: 50px;
         height: 50px;
@@ -850,7 +850,7 @@ margin on the iframe, cause it breaks stuff. */
     .logo-readium .logo{
         width: 50px;
         height: 50px;
-    }
+    } */
 }
 
 /* ==========================================================================
@@ -952,7 +952,7 @@ margin on the iframe, cause it breaks stuff. */
         margin-top: 6rem;
         font-size: 1.1rem;
     }
-    .logo-readium {
+/*     .logo-readium {
         top: -30px;
         width: 30px;
         height: 30px;
@@ -960,7 +960,7 @@ margin on the iframe, cause it breaks stuff. */
     .logo-readium .logo{
         width: 30px;
         height: 30px;
-    }
+    } */
 
 }
 
