--- a/index.hbs
+++ b/index.hbs
@@ -51,15 +51,15 @@
                     .css('opacity', 1-Math.max(top/700, 0));
                 $blog_logo
                     .css('transform', 'translate3d(0px, '+top/2+'px, 0px)')
-                    .css('opacity', 1-Math.max(top/800, 0))
-                    .css('margin-top', (1-Math.max(top/200, 0))*72)+'px'; 
+                    .css('opacity', 1-Math.max(top/800, 0));
+                    // .css('margin-top', (1-Math.max(top/200, 0))*72)+'px'; 
                 $blog_title
                     .css('transform', 'translate3d(0px, '+top/3+'px, 0px)')
-                    .css('opacity', 1-Math.max(top/500, 0))
-                    .css('padding-top', (1-Math.max(top/200, 0))*64+'px');
+                    .css('opacity', 1-Math.max(top/500, 0));
+                    // .css('padding-top', (1-Math.max(top/200, 0))*64+'px');
                 $blog_desc
                     .css('transform', 'translate3d(0px, '+top/3.5+'px, 0px)')
-                    .css('opacity', 1-Math.max(top/200, 0))
+                    .css('opacity', 1-Math.max(top/400, 0))
                     .css('margin-bottom', (1-Math.max(top/200, 0))*20+'px');
 /******  ADDED - LES *********/                
                 if (top > 450) {
