--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -76,14 +76,12 @@ body
 		top: -$rs*4
 		width: $rs*4
 		height: $rs*4
-	@include respond-to(568)
+	@include respond-to(320)
 		top: -$rs*3
-		width: $rs*3
-		height: $rs*3
-	@include respond-to(480)
-		top: -$rs*3
-		width: $rs*3
-		height: $rs*3
+		left: 0px
+		display: block
+		width: 100%
+		height: $rs*4
 	// background-color: #000
 	overflow: hidden
 	z-index: 99
@@ -91,7 +89,7 @@ body
 	-webkit-transition: all 0.5s ease-out
 	-moz-transition: all 0.5s ease-out
 	-o-transition: all 0.5s ease-out
-	transition: all 0.5s ease-out
+	transition: all 0.5s ease-in-out
 	.logo
 		display: block
 		position: absolute
@@ -112,15 +110,32 @@ body
 			width: $rs*3
 			height: $rs*3
 		background-image: url('/assets/img/readium-logo.png')
-		background-size: cover
+		background-size: contain
 		background-repeat: no-repeat
+		transition: all 0.5s ease-in-out
 .logo-readium.showing
 	left: 10px
 	top: 10px
 	opacity: 0.95
+	@include respond-to(320)
+		top: 20px
+		left: 0px
+		display: block
+		width: 100%
+		height: $rs*4
+		position: absolute
+		.logo
+			background-position: center center
+			background-repeat: no-repeat
+			background-size: contain
+			display: block
+			width: 100%
+			height: 64px
 	
 .teaserimage
 	height: 450px
+	@include respond-to(568)
+		height: 225px
 	position: relative
 	overflow: hidden
 	background-color: #000
@@ -140,10 +155,15 @@ body
 	.blog-logo
 		width: $rs*9
 		height: $rs*9
+		@include respond-to(568)
+			width: $rs*4.5
+			height: $rs*4.5
 		display: block
 		position: relative
 		// top: calc(50% - #{$rs})
 		margin: $rs*4.5 auto 0 auto
+		@include respond-to(568)
+			margin: $rs*2.25 auto 0 auto	
 		// right: 50%
 		// margin-right: -$rs*3.75
 		background-size: cover
@@ -165,6 +185,9 @@ body
 		margin: 0
 		padding: $rs*4 $rs $rs/2
 		font-size: $ff*3
+		@include respond-to(568)
+			font-size: $ff*1.35
+			padding: $rs*1.5 $rs $rs/2
 		text-align: center
 		font-weight: 900
 		letter-spacing: -2px
@@ -180,6 +203,9 @@ body
 		margin: 0 0 20px
 		padding: 0 $rs*2
 		font-size: $ff/8*9
+		@include respond-to(568)
+			font-size: $ff*0.7
+			padding: 0 $rs*0.7
 		line-height: 1.61
 		color: #efefef
 		text-align: center
@@ -395,6 +421,8 @@ body
 			font-style: normal
 			letter-spacing: -0.04em
 			font-size: $ff*3
+			@include respond-to(568)
+				font-size: $ff*2
 			line-height: 1.61803399
 			color: #fff
 			margin-bottom: 16px
@@ -419,6 +447,8 @@ body
 			font-style: normal
 			text-shadow: 0px 1px 4px rgba(0,0,0,0.25), 0px 0px 1px rgba(0,0,0,0.5)
 			font-size: $ff*0.9
+			@include respond-to(568)
+				font-size: $ff*0.7
 			overflow: hidden
 			font-family: $font-sans
 			white-space: nowrap
@@ -444,6 +474,8 @@ body
 			font-style: normal
 			letter-spacing: -0.04em
 			font-size: $ff*3
+			@include respond-to(568)
+				font-size: $ff*2
 			line-height: 1.61803399
 			color: #333332
 			margin-bottom: 16px
@@ -466,6 +498,8 @@ body
 			font-weight: 400
 			font-style: normal
 			font-size: $ff*0.9
+			@include respond-to(568)
+				font-size: $ff*0.7
 			overflow: hidden
 			font-family: $font-sans
 			white-space: nowrap
@@ -688,29 +722,62 @@ body
 		background-size: cover
 		background-repeat: no-repeat
 		background-position: center
-		background-image: url('/assets/img/crushed/footer_sm.png')
+		background-image: url('/assets/img/crushed/header_sm_blank.png')
 		@include respond-to(800)
-			background-image: url('/assets/img/crushed/footer_mobile.png')
+			background-image: url('/assets/img/crushed/header_mobile_blank.png')
 	.inner
 		width: 100%
 		position: relative
 		z-index: 99
 		max-width: 640px
-		padding: 170px 0 40px
+		padding: 110px 0 40px
+		@include respond-to(568)
+			padding: 55px 0 40px
 		text-align: center
 		margin: 0 auto
+		.blog-logo
+			width: $rs*6
+			height: $rs*6
+			@include respond-to(568)
+				width: $rs*4.5
+				height: $rs*4.5
+			display: inline-block
+			position: relative
+			margin: 0 auto 0 auto
+			@include respond-to(568)
+				margin: 0 auto 0 auto	
+			background-size: cover
+			border-radius: 50%
+			z-index: 99
+			text-indent: -9999px
+			vertical-align: middle
+			border: 1px solid #fff
+			// background-color: #fff
+			-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.3)
+			-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.3)
+			box-shadow: 0 1px 1px rgba(0,0,0,0.3)
+			background-image: url('/assets/img/crushed/initials_cutout_vintage.png')
+			@include respond-to(800)
+				background-image: url('/assets/img/crushed/initials_cutout_vintage.png')
 		.blog-title
-			margin: 0
-			padding: 0 0 10px
-			font-size: $ff*3
+			padding: 0 0 10px 0.5em
 			text-align: center
-			font-weight: 700
+			position: relative
+			z-index: 99
+			font-family: $font-serif
+			margin: 0
+			font-size: $ff*1.8
+			@include respond-to(568)
+				font-size: $ff*1.1
+			font-weight: 900
 			letter-spacing: -2px
+			vertical-align: middle
 			outline: 0
-			line-height: 50px
+			line-height: 1.61
 			word-break: break-word
 			color: #fff
-			text-shadow: 0px 1px 16px rgba(0,0,0,0.5), 0px 0px 1px rgba(0,0,0,0.5)
+			text-shadow: 1px 2px 2px black
+			display: inline
 		.blog-description
 			margin: 0 0 50px
 			padding: 0 $rs*2
@@ -724,9 +791,14 @@ body
 			margin: 0 0 50px
 		.btn
 			display: inline-block
+			margin-top: $rs
 			text-align: center
 			letter-spacing: -0.02em
 			font-size: $ff*0.9
+			@include respond-to(568)
+				font-size: $ff*0.8
+				line-height: 34px
+				height: 34px
 			font-weight: 400
 			font-style: normal
 			text-decoration: none
